test/ui/tests/parsing/invalid-indentation-too-deep.stderr
error[E003]: invalid indentation consisting of 8 spaces
 --> ${DIRECTORY}/parsing/invalid-indentation-too-deep.lushui:4:1
  |
4 |         x: X
  | ^^^^^^^^ 
  |
 note: indentation is greater than 4 and therefore too deep

error: aborting due to previous error
 note: the error E003 has a detailed explanation
 help: run `lushui explain E003` to view it

